--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2021"
 
 [dependencies]
 axum = "0.7"
+axum-macros = "0.4"
+futures = "0.3"
 rayon = "1.10"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
@@ -14,3 +16,5 @@ tokenizers = "0.19"
 tokio = { version = "1.37", features = ["full"] }
 tower = "0.4"
 winnow = { version = "0.6" }
+tracing = "0.1"
+tracing-subscriber = "0.3"
