--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ serde_json = "1.0"
 tokenizers = "0.19"
 tokio = { version = "1.37", features = ["full"] }
 tower = "0.4"
+tower-http = { version = "0.5", features = ["trace"] }
 winnow = { version = "0.6" }
 tracing = "0.1"
 tracing-subscriber = "0.3"
